fixing navbar icon gap on mobile

--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -167,6 +167,10 @@ main {
   .link-text {
     display: none !important;
   }
+
+  .link-text {
+    display: none !important;
+  }
 }
 
 /* Large screens */
